[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/font-title.tres" type="DynamicFont" id=1]
[ext_resource path="res://themes/theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/Settings.gd" type="Script" id=3]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 319.0
margin_top = 113.0
margin_right = 705.0
margin_bottom = 487.0

[node name="LabelTitle" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 386.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.611765, 0.631373, 0.552941, 1 )
text = "Settings"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 386.0
margin_bottom = 112.0
custom_constants/margin_bottom = 50

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 386.0
margin_bottom = 276.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 383.0
margin_bottom = 157.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 350.0
margin_bottom = 124.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 18.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 18.0
rect_min_size = Vector2( 100, 0 )
text = "Menu Music"
align = 1

[node name="SliderMenuMusic" type="HSlider" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 320.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )
step = 10.0
value = 50.0

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 320.0
margin_bottom = 56.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 100.0
margin_bottom = 18.0
rect_min_size = Vector2( 100, 0 )
text = "Game Music"
align = 1

[node name="SliderGameMusic" type="HSlider" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 120.0
margin_right = 320.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )
step = 10.0
value = 50.0

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 320.0
margin_bottom = 94.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 100.0
margin_bottom = 18.0
rect_min_size = Vector2( 100, 0 )
text = "Sounds"
align = 1

[node name="SliderSounds" type="HSlider" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 120.0
margin_right = 320.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )
step = 10.0
value = 50.0

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 280.0
margin_right = 386.0
margin_bottom = 330.0
custom_constants/margin_bottom = 50

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 334.0
margin_right = 386.0
margin_bottom = 374.0

[node name="ButtonBack" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 93.0
margin_right = 293.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
size_flags_horizontal = 0
text = "Back"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -38.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 891.0
margin_bottom = 18.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 895.0
margin_right = 1004.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0.611765, 0.631373, 0.552941, 1 )
text = "v-10, 2022-06-05"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SliderMenuMusic" to="." method="_on_SliderMenuMusic_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/SliderGameMusic" to="." method="_on_SliderGameMusic_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/SliderSounds" to="." method="_on_SliderSounds_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/ButtonBack" to="." method="_on_ButtonBack_pressed"]
